tests/NormalTests/paczka1/small_fuzzy/96316597.err
Error in line 3: j0jqhUZSMr A519 85,7
Error in line 4: j0jqhUZSMr A406 40,5
